# mutagen-rs

./: CLAUDE.md  Cargo.toml  README.md  baseline_benchmark.py  baseline_results.json  mutagen-100x-creative.md  mutagen-rs-Lofty_INSTRUCTIONS.md  mutagen-rs-Optimization-Instructions.md  mutagen-rust-task.md  performance_results.json  pyproject.toml  run_benchmarks.sh
benches/: parse_comparison.rs
benchmarks/: 1.txt  2.txt  SUMMARY.md  benchmark_2026-02-05_10-01-58.txt  benchmark_2026-02-05_10-06-04.txt  benchmark_2026-02-05_10-21-47.txt  history.json  update_summary.py
python/mutagen_rs/: __init__.py
src/: lib.rs
src/common/: error.rs  util.rs
src/flac/: mod.rs
src/id3/: frames.rs  header.rs  id3v1.rs  mod.rs  specs.rs  tags.rs  unsynch.rs  writer.rs
src/mp3/: header.rs  mod.rs  xing.rs
src/mp4/: atom.rs  mod.rs
src/ogg/: mod.rs
src/vorbis/: mod.rs
tests/: test_api_compat.py  test_performance.py
