[package]
name = "mutagen-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "mutagen_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"] }
memmap2 = "0.9"
thiserror = "2.0"
encoding_rs = "0.8"
byteorder = "1.5"
flate2 = "1.0"
memchr = "2.7"
mimalloc = { version = "0.1", default-features = false }
rayon = "1.10"
itoa = "1.0"
ryu = "1.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
