[package]
name = "mutagen-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "mutagen_rs"
crate-type = ["cdylib", "lib"]

[features]
default = ["python"]
python = ["dep:pyo3"]

[dependencies]
pyo3 = { version = "0.27", features = ["extension-module"], optional = true }
memmap2 = "0.9"
thiserror = "2.0"
encoding_rs = "0.8"
byteorder = "1.5"
flate2 = "1.0"
memchr = "2.7"
mimalloc = { version = "0.1", default-features = false }
rayon = "1.10"
itoa = "1.0"
ryu = "1.0"
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
lofty = { path = "lofty-rs/lofty" }

[[bench]]
name = "parse_comparison"
harness = false

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3
